feat(audio): publish qualified Soprano models (#136)
* feat(audio): publish qualified Soprano models

* fix(catalog): inspect large GGUF metadata arrays